--- a/sources/campaign.move.upgrade.ver.1
+++ b/sources/campaign.move.upgrade.ver.1
@@ -9,11 +9,11 @@ module campaign::campaign {
     /* Error Constants */
     const ENotCampaignOwner: u64 = 0;
     const ENotReferThemselves: u64 = 1;
-    const EReferralExistAlready: u64 = 2;
-    const EReferrerNotBeReferee: u64 = 3;
-    const ERefereeExistAlready: u64 = 4;
+    const EAddressAlreadyRegisteredAsReferrer: u64 = 2;
+    const EAddressAlreadyRegisteredAsReferee: u64 = 3;
+    // const ERefereeExistAlready: u64 = 4;
     const ECampaignEndedAlready:u64 = 5;
-    const EAddressExistAlready: u64 = 6;
+    // const EAddressExistAlready: u64 = 6;
     const EAddressNotExist: u64 = 7;
     const EPermissionNotExist: u64 = 8;
     
@@ -37,7 +37,7 @@ module campaign::campaign {
         title: String,
         about: String, // a breif description of the campaign
         active: bool,
-        whitelist: Table<address, bool>,
+        whitelist: Table<address, vector<u64>>,
         total_referees: Table<address, bool>,
         referrals: Table<address, Table<address, bool>>,
         activities: Table<address, Table<u64, bool>>,
@@ -83,7 +83,7 @@ module campaign::campaign {
             title,
             about,
             active: true,
-            whitelist: table::new<address, bool>(ctx),
+            whitelist: table::new<address, vector<u64>>(ctx),
             total_referees: table::new<address, bool>(ctx),
             referrals: table::new<address, Table<address, bool>>(ctx),
             activities: table::new<address, Table<u64, bool>>(ctx),
@@ -113,6 +113,29 @@ module campaign::campaign {
         campaign.ended_at = some(clock::timestamp_ms(clock));
     }
 
+    // Delete campaign
+    // You are allowed to do anything with the score, including view, edit, delete the entire transcript itself.
+    public entry fun delete_campaign(_: &AdminCap, campObject: Campaign){
+        let Campaign {
+            id, 
+            title,
+            about,
+            active,
+            whitelist, 
+            total_referees,
+            referrals,
+            activities,
+            started_at,
+            ended_at
+        } = campObject;
+
+        object::delete(id);
+        table::drop(whitelist);
+        table::drop(total_referees);
+        table::destroy_empty(referrals);
+        table::destroy_empty(activities);
+    }
+
     // Add custodial wallet address to whitelist
     // this function uses the capability design pattern (admin_cap) to ensure that only
     // an admin can add address
@@ -125,8 +148,9 @@ module campaign::campaign {
         // assert!(!table::contains<address, bool>(&campaign.whitelist, wallet_address), EAddressExistAlready);
         
         // Add address to the whitelist table
-        if (!table::contains<address, bool>(&campaign.whitelist, wallet_address)) {
-            table::add(&mut campaign.whitelist, wallet_address, permission);
+        if (!table::contains<address, vector<u64>>(&campaign.whitelist, wallet_address)) {
+            let secret_list: vector<u64> = vector[if (permission) { 1 } else { 0 }, 0, 0];
+            table::add(&mut campaign.whitelist, wallet_address, secret_list);
         }
     }
 
@@ -139,11 +163,12 @@ module campaign::campaign {
         wallet_address: address,
         permission: bool) {
         // Check if address is already whitelisted
-        assert!(table::contains<address, bool>(&campaign.whitelist, wallet_address), EAddressNotExist);
+        assert!(table::contains<address, vector<u64>>(&campaign.whitelist, wallet_address), EAddressNotExist);
         
         // Update permission of wallet address
-        let old_permission = table::borrow_mut(&mut campaign.whitelist, wallet_address);
-        *old_permission = permission;
+        let secret_list = table::borrow_mut(&mut campaign.whitelist, wallet_address);
+        let old_permission = vector::borrow_mut(secret_list, 0);
+        *old_permission = if (permission) { 1 } else { 0 };
     }
 
     // Create a new referral
@@ -162,23 +187,40 @@ module campaign::campaign {
         // asserts that the campaign from actually belongs to the caller
         assert!(cap.campaign_id == object::uid_to_inner(&campaign.id), ENotCampaignOwner);
 
-        // Check if address is whitelisted
-        assert!(table::contains<address, bool>(&campaign.whitelist, referee), EPermissionNotExist);
+        // Check if referee is whitelisted
+        assert!(table::contains<address, vector<u64>>(&campaign.whitelist, referee), EPermissionNotExist);
 
-        // Check if address has permission
-        let permission = table::borrow(&campaign.whitelist, referee);
-        assert!(permission == true, EPermissionNotExist);
+        // Check if referrer is whitelisted
+        assert!(table::contains<address, vector<u64>>(&campaign.whitelist, referrer), EPermissionNotExist);
+
+        // Get the secret list of referee
+        let referee_secret_list = table::borrow_mut(&mut campaign.whitelist, referee);
+
+        // Check if referee has permission
+        let permission = referee_secret_list[0];
+        assert!(permission == 1, EPermissionNotExist);
 
         // Can not refer to itself
         assert!(referee != referrer, ENotReferThemselves);
 
         // Check if referee is already registered as referrer
-        let existReferrer = table::contains<address, Table<address, bool>>(&campaign.referrals, referee);
-        assert!(!existReferrer, EReferrerNotBeReferee);
+        let referees_count_of_owner = vector::borrow_mut(referee_secret_list, 1);
+        assert!(referees_count_of_owner == 0, EAddressAlreadyRegisteredAsReferrer);
 
         // Check if referee is already registered as referee
-        assert!(!table::contains<address, bool>(&campaign.total_referees, referee), ERefereeExistAlready);
-        
+        let isReferee = vector::borrow_mut(referee_secret_list, 2);
+        assert!(isReferee == 0, EAddressAlreadyRegisteredAsReferee);
+
+        // Register that address has been referred. 
+        *isReferee = 1;
+
+        // Increase referees count of referrer
+        // Get the secret list of referrer
+        let referrer_secret_list = table::borrow_mut(&mut campaign.whitelist, referrer);
+        let referees_count_of_referrer = vector::borrow_mut(referrer_secret_list, 1);
+        *referees_count_of_referrer = (*referees_count_of_referrer + 1);
+
+/*        
         if (!table::contains<address, Table<address, bool>>(&campaign.referrals, referrer)) {
             let mut referees = table::new<address, bool>(ctx);
             table::add(&mut referees, referee, true);
@@ -198,7 +240,7 @@ module campaign::campaign {
             // Add referee to the referees table
             table::add(&mut campaign.total_referees, referee, true);
         };
-
+*/
         // Retrieve the current on-chain time
         let created_at = clock::timestamp_ms(clock);
 
@@ -225,15 +267,17 @@ module campaign::campaign {
         let user = ctx.sender();
 
         // Check if address is whitelisted
-        assert!(table::contains<address, bool>(&campaign.whitelist, user), EPermissionNotExist);
+        assert!(table::contains<address, vector<u64>>(&campaign.whitelist, user), EPermissionNotExist);
 
         // Check if address has permission
-        let permission = table::borrow(&campaign.whitelist, user);
-        assert!(permission == true, EPermissionNotExist);
+        let secret_list = table::borrow(&campaign.whitelist, user);
+        let permission = secret_list[0];
+        assert!(permission == 1, EPermissionNotExist);
 
         // Retrieve the current on-chain time
         let current_time = clock::timestamp_ms(clock);
-        
+
+/*        
         if (!table::contains<address, Table<u64, bool>>(&campaign.activities, user)) {
             // Create new user's activities
             let mut activities = table::new<u64, bool>(ctx);
@@ -249,6 +293,7 @@ module campaign::campaign {
             // Add the new activity to the user's activities
             table::add(activities, current_time, true);
         };        
+*/
 
         // Emit user activity event
         event::emit(LoginEvent {
